b=266085, nsIWritablePropertyBag interface and hashtable component implementation; r=darin,sr=shaver